baml_language/crates/baml_lsp_actions_tests/test_files/syntax/invalid_assignment/compound_ops.baml
// Test: Compound assignment operator type mismatches

function CompoundAssignments() -> int {
	// === VALID ===
	let a = 10;
	a += 5;

	let b = 1.5;
	b += 2.5;

	// === INVALID ===

	// int += string
	let c = 10;
	c += "five";

	// string += int
	let d = "start";
	d += 100;

	// int += bool
	let e = 20;
	e += true;

	// bool += int
	let f = true;
	f += 1;

	// float += string
	let g = 3.5;
	g += "add";

	1
}

//----
//- diagnostics
// Error: Expected `int`, found `string`
//     в•ӯв”Җ[ invalid_assignment_compound_ops.baml:15:7 ]
//     в”Ӯ
//  15 в”Ӯ     c += "five";
//     в”Ӯ          в”Җв”Җв”Җв”¬в”Җв”Җ  
//     в”Ӯ             в•°в”Җв”Җв”Җв”Җ Expected `int`, found `string`
//     в”Ӯ 
//     в”Ӯ Note: Error code: E0001
// в”Җв”Җв”Җв”Җв•Ҝ
// Error: Expected `string`, found `int`
//     в•ӯв”Җ[ invalid_assignment_compound_ops.baml:19:7 ]
//     в”Ӯ
//  19 в”Ӯ     d += 100;
//     в”Ӯ          в”Җв”¬в”Җ  
//     в”Ӯ           в•°в”Җв”Җв”Җ Expected `string`, found `int`
//     в”Ӯ 
//     в”Ӯ Note: Error code: E0001
// в”Җв”Җв”Җв”Җв•Ҝ
// Error: Expected `int`, found `bool`
//     в•ӯв”Җ[ invalid_assignment_compound_ops.baml:23:7 ]
//     в”Ӯ
//  23 в”Ӯ     e += true;
//     в”Ӯ          в”Җв”Җв”¬в”Җ  
//     в”Ӯ            в•°в”Җв”Җв”Җ Expected `int`, found `bool`
//     в”Ӯ 
//     в”Ӯ Note: Error code: E0001
// в”Җв”Җв”Җв”Җв•Ҝ
// Error: Expected `bool`, found `int`
//     в•ӯв”Җ[ invalid_assignment_compound_ops.baml:27:7 ]
//     в”Ӯ
//  27 в”Ӯ     f += 1;
//     в”Ӯ          в”¬  
//     в”Ӯ          в•°в”Җв”Җ Expected `bool`, found `int`
//     в”Ӯ 
//     в”Ӯ Note: Error code: E0001
// в”Җв”Җв”Җв”Җв•Ҝ
// Error: Expected `float`, found `string`
//     в•ӯв”Җ[ invalid_assignment_compound_ops.baml:31:7 ]
//     в”Ӯ
//  31 в”Ӯ     g += "add";
//     в”Ӯ          в”Җв”Җв”¬в”Җв”Җ  
//     в”Ӯ            в•°в”Җв”Җв”Җв”Җ Expected `float`, found `string`
//     в”Ӯ 
//     в”Ӯ Note: Error code: E0001
// в”Җв”Җв”Җв”Җв•Ҝ
